# lightning-owhisper-mlx

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  test.py  test_audio_collector.py  test_integration.py  test_realtime_simulation.py  test_websocket_client.py
server/: __init__.py  __main__.py  app.py  audio.py  auth.py  config.py  responses.py  streaming.py  transcriber.py
src/: __init__.py  audio_processor.py  config.py  deepgram_adapter.py  models.py  server.py  transcription_service.py
src/lightning_owhisper_mlx/: __init__.py  config.py  main.py  responses.py  segmenter.py  server.py  transcriber.py
tests/: test_hyprnote_ws.py  test_responses.py  test_segmenter.py  test_server_auth.py
