[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning-owhisper-mlx"
version = "0.1.0"
description = "Deepgram-compatible streaming server powered by lightning-whisper-mlx"
readme = "README.md"
authors = [{name = "OpenAI Assistant"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.118.0",
    "websockets==15.0.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "lightning-whisper-mlx",
    "python-multipart==0.0.6",
    "yt-dlp==2023.12.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
